--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.8",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.2.66",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
