--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
