--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
+    "d3-format": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
     "gapi-script": "^1.2.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-financial-charts": "^2.0.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.8",
-    "tradingeconomics": "^2.4.0"
+    "tradingeconomics": "^2.4.0",
+    "tslib": "^2.6.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-time-format": "^4.0.3",
     "@types/react": "^18.2.66",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.2.22",
