--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.5",
     "gapi-script": "^1.2.0",
+    "lightweight-charts": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
