--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.12.5",
     "gapi-script": "^1.2.0",
     "lightweight-charts": "^4.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
     "@types/axios": "^0.14.0",
     "@types/d3-format": "^3.0.4",
     "@types/d3-time-format": "^4.0.3",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.66",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.2.22",
