--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "date-fns": "^3.6.0",
-    "firebase": "^10.12.5",
+    "firebase": "^11.0.1",
     "gapi-script": "^1.2.0",
+    "golden-layout": "^2.6.0",
     "lightweight-charts": "^4.2.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-financial-charts": "^2.0.1",
     "react-grid-layout": "^1.4.4",
@@ -50,6 +53,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "less": "^4.2.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
