--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ag-grid-community/theming": "^32.3.3",
     "@elastic/eui": "^98.0.0",
     "@react-oauth/google": "^0.12.1",
+    "@table-library/react-table-library": "^4.1.7",
     "@types/styled-components": "^5.1.34",
     "ag-grid-community": "^32.3.3",
     "ag-grid-enterprise": "^32.3.3",
