Adding Central Bank Rates

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ag-grid-community": "^32.3.3",
     "ag-grid-enterprise": "^32.3.3",
     "ag-grid-react": "^32.3.3",
-    "axios": "^1.7.2",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
@@ -28,7 +28,7 @@
     "firebase": "^11.0.1",
     "gapi-script": "^1.2.0",
     "golden-layout": "^2.6.0",
-    "lightweight-charts": "^4.2.0",
+    "lightweight-charts": "^4.2.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -36,7 +36,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-financial-charts": "^2.0.1",
-    "react-grid-layout": "^1.4.4",
+    "react-grid-layout": "^1.5.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.8",
     "tradingeconomics": "^2.4.0",
