Added Commoditites to FiscalOverview

--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "date-fns": "^3.6.0",
+    "express": "^4.21.2",
     "firebase": "^11.0.1",
     "gapi-script": "^1.2.0",
     "golden-layout": "^2.6.0",
     "lightweight-charts": "^4.2.2",
     "lodash": "^4.17.21",
+    "puppeteer": "^23.11.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
