--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src"
   },
-  "include": ["src"],
+  "include": ["src", ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
